--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -26,18 +26,23 @@
                 <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                     <div class="menu_section">
                         <h3>General</h3>
+                        <div routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+                            <a routerLink="/main/role/index">Jim</a>
+                            <a routerLink="/main/function/index">Bob</a>
+                        </div>
                         <ul class="nav side-menu">
                             <li><a><i class="fa fa-home"></i> Trang chủ</a>
                             </li>
                             <li><a><i class="fa fa-desktop"></i> Hệ thống <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a routerLink="/main/role/index" routerLinkActive="active">Nhóm</a></li>
-                                    <li><a routerLink="/main/function/index" routerLinkActive="active">Chức năng</a></li>
-                                    <li><a routerLink="/main/user/index" routerLinkActive="active">Người dùng</a></li>
-                                    <li><a routerLink="/main/activity/index" routerLinkActive="active">Nhật ký</a></li>
-                                    <li><a routerLink="/main/error/index" routerLinkActive="active">Lỗi</a></li>
-                                    <li><a routerLink="/main/setting/index" routerLinkActive="active">Cấu hình</a></li>
+                                    <li><a routerLink="/main/role/index">Role</a></li>
+                                    <li><a routerLink="/main/function/index">Chức năng</a></li>
+                                    <li><a routerLink="/main/user/index">Người dùng</a></li>
+                                    <li><a routerLink="/main/activity/index">Nhật ký</a></li>
+                                    <li><a routerLink="/main/error/index">Lỗi</a></li>
+                                    <li><a routerLink="/main/setting/index">Cấu hình</a></li>
                                 </ul>
+
                             </li>
                             <li><a><i class="fa fa-chevron-down"></i> Sản phẩm <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
